--- a/transition.html
+++ b/transition.html
@@ -4,15 +4,28 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="CSS/transition.css">
+    <link rel="stylesheet" href="CSS/transition.css" type="text/css">
 
     <title>Transition</title>
 </head>
 <body>
-    
+
     <a href="#" class="efeito1"></a>
     <a href="#" class="efeito2"></a>
     <a href="#" class="efeito3"></a>
+
+    <br><br>
+
+    <a href="#" class="efeito4"></a>
+    <a href="#" class="efeito5"></a>
+    <a href="#" class="efeito6"></a>
+    <a href="#" class="efeito7"></a>
+
+    <br><br>
+
+    <a href="#" class="efeito8"></a>
+    <a href="#" class="efeito9"></a>
+    <a href="#" class="efeito10"></a>
 
 </body>
 </html>
