organizando em pastas

--- a/camadas/camadas.html
+++ b/camadas/camadas.html
@@ -7,7 +7,7 @@
 
     <title>Document</title>
 
-    <link rel="stylesheet" href="CSS/camadas.css" type="text/css" /> <!-- importação do css que está em outro arquivo -->
+    <link rel="stylesheet" href="camadas.css" type="text/css" /> <!-- importação do css que está em outro arquivo -->
 
 </head>
 
@@ -15,7 +15,7 @@
     <div id="camada1">Conteúdo da camada 1</div>
     <div id="camada2">Conteúdo da camada 2</div>
     <div id="camada3">Conteúdo da camada 3</div>
-    <div id="camada4"><img src="imagens/cat.jpg" alt="Gato Progamando"></div>
+    <div id="camada4"><img src="/imagens/cat.jpg" alt="Gato Progamando"></div>
 
     <br /> <br /> <br /> <br />
 
