--- a/efeitos_css/efeitos_css.html
+++ b/efeitos_css/efeitos_css.html
@@ -7,7 +7,7 @@
 
     <title>Efeitos css</title>
 
-    <link rel="stylesheet" href="CSS/efeitos_css.css" type="text/css">
+    <link rel="stylesheet" href="efeitos_css.css" type="text/css">
 
 </head>
 <body>
