--- a/modal/exemplo_modal.html
+++ b/modal/exemplo_modal.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Modal</title>
 
-    <link rel="stylesheet" href="css/exemplo_modal.css">
-    <script src="js/exemplo_modal.js" type="text/javascript"></script>
+    <link rel="stylesheet" href="exemplo_modal.css">
+    <script src="exemplo_modal.js" type="text/javascript"></script>
 </head>
 <body>
     
@@ -22,7 +22,7 @@
     <div class="janela_escura">
         <div class="modal">
             <div class="fechar" onclick="fechar_modal()">x</div>
-            <img src="imagens/cat.jpg"/>
+            <img src="/imagens/cat.jpg"/>
         </div>
     </div>
 
