--- a/relativas/relativas.html
+++ b/relativas/relativas.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- CSS -->
-    <link rel="stylesheet" href="CSS/relativas.css" type="text/css" />
+    <link rel="stylesheet" href="relativas.css" type="text/css" />
 
     <!-- Título da página (aparece na aba) -->
     <title>Document</title>
