--- a/responsivo/responsivo.html
+++ b/responsivo/responsivo.html
@@ -9,7 +9,7 @@
 
     <title>Trabalhando com design responsivo</title>
 
-    <link rel="stylesheet" href="css/responsivo.css" type="text/css" />
+    <link rel="stylesheet" href="responsivo.css" type="text/css" />
 </head>
 
 <body>
@@ -52,7 +52,7 @@
         </section>
         <aside> <!-- tag publicidade -->
             <a href="https://www.rakuten.com/" target="_blank">
-                <img src="imagens/aside.jpg" />
+                <img src="/imagens/aside.jpg" />
             </a>
         </aside>
         <footer>
