--- a/tags_html/Tags_html5.html
+++ b/tags_html/Tags_html5.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- CSS -->
-    <link rel="stylesheet" href="css/Tags_html5.css" type="text/css" />
+    <link rel="stylesheet" href="Tags_html5.css" type="text/css" />
 
     <!-- Título da página (aparece na aba) -->
     <title>Tags html5</title>
