--- a/modo_escuro/modo_escuro.html
+++ b/modo_escuro/modo_escuro.html
@@ -7,8 +7,8 @@
 
     <title>Mudando cores</title>
 
-    <link rel="stylesheet" href="/CSS/modo_escuro.css">
-    <script src="js/modo_escuro.js" type="text/javascript"></script>
+    <link rel="stylesheet" href="modo_escuro.css">
+    <script src="modo_escuro.js" type="text/javascript"></script>
 </head>
 <body id="fundo">
     
@@ -23,7 +23,7 @@
 
     <hr>
 
-    <img id="myImage" src="imagens/joker.jpg">
+    <img id="myImage" src="/imagens/joker.jpg">
 
 </body>
 </html>
