--- a/teste_js/teste_js.html
+++ b/teste_js/teste_js.html
@@ -5,28 +5,28 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="stylesheet" href="css/teste_js.css" type="text/css" />
-    <script src="js/teste_js.js" type="text/javascript"></script> <!-- linkando o documento js -->
+    <link rel="stylesheet" href="teste_js.css" type="text/css" />
+    <script src="teste_js.js" type="text/javascript"></script> <!-- linkando o documento js -->
 
     <title>js</title>
 </head>
 <body>
-    <img src="imagens/html5.png" onmouseover="show_camada1()" onmouseout="some_tudo()"> <!-- chamando função do js ao html  -->
-    <img src="imagens/css3.png" onmouseover="show_camada2()" onmouseout="some_tudo()">
-    <img src="imagens/js.png" onmouseover="show_camada3()" onmouseout="some_tudo()">
+    <img src="/imagens/html5.png" onmouseover="show_camada1()" onmouseout="some_tudo()"> <!-- chamando função do js ao html  -->
+    <img src="/imagens/css3.png" onmouseover="show_camada2()" onmouseout="some_tudo()">
+    <img src="/imagens/js.png" onmouseover="show_camada3()" onmouseout="some_tudo()">
 
     <div id="camada1">
-        <img src="imagens/html5.png">
+        <img src="/imagens/html5.png">
         Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ipsam perspiciatis fugiat, doloribus porro consectetur ad minus. Amet deleniti ea, impedit corrupti distinctio aperiam officia facere qui! Sed, laborum non? Similique!
     </div>
 
     <div id="camada2">
-        <img src="imagens/css3.png">
+        <img src="/imagens/css3.png">
         Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ipsam perspiciatis fugiat, doloribus porro consectetur ad minus. Amet deleniti ea, impedit corrupti distinctio aperiam officia facere qui! Sed, laborum non? Similique!
     </div>
 
     <div id="camada3">
-        <img src="imagens/js.png">
+        <img src="/imagens/js.png">
         Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ipsam perspiciatis fugiat, doloribus porro consectetur ad minus. Amet deleniti ea, impedit corrupti distinctio aperiam officia facere qui! Sed, laborum non? Similique!
     </div>
 </body>
